--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
     </details>
 </section>
 <section class="about-container">
-    <h2 class="about-title">What is BCHS Unblocked Games?</h2>
-    <p>BCHS Unblocked Games is a intuitive online gaming destination designed to eliminate boredom with its ever-growing collection of over 200+ Flash and HTML games. From classic arcade games to the latest action-packed adventures, our diverse selection has something for everyone, ensuring you stay entertained all day long. But that's not all we also empower our users with the freedom to search the web without any restrictions. Our blazing fast proxy allows you to bypass filters and access the information you need, whenever you need it. Whether you're taking a break between classes or looking for a way to unwind after a long day, BCHS Unblocked Games is your ultimate gateway to endless fun and unrestricted web browsing.</p>
+    <h2 class="about-title">What is Joelito Unblocked Games?</h2>
+    <p>Joelito Unblocked Games is a intuitive online gaming destination designed to eliminate boredom with its ever-growing collection of over 200+ Flash and HTML games. From classic arcade games to the latest action-packed adventures, our diverse selection has something for everyone, ensuring you stay entertained all day long. But that's not all we also empower our users with the freedom to search the web without any restrictions. Our blazing fast proxy allows you to bypass filters and access the information you need, whenever you need it. Whether you're taking a break between classes or looking for a way to unwind after a long day, BCHS Unblocked Games is your ultimate gateway to endless fun and unrestricted web browsing.</p>
     <p class="tiny-text">*This info page is here so that i can hopefully get approved for ads.*</p>
 </section>
     <script src="assets/js/info.js"></script>
@@ -142,7 +142,7 @@
       <!-- Footer Start -->
       <footer class="footer">
         <div class="logo-container">
-            <a>BCHS Unblocked Games</a>
+            <a>Joelito Unblocked Games</a>
         </div>
         <nav class="footer-nav">
             <a href="iframe.html" onclick="setIframeType('home');localStorage.setItem('shownameandimg', 'false');localStorage.setItem('storedURL', 'https://forms.gle/it3WqC7rxXLx9ePc8');" class="footer-link">Request Games</a>
